Sidebar toggle button wrong size fix, Add throttle to topbar buttons and sidebar toggle, Add config throttleWaitTime

--- a/resources/assets/sass/abstracts/_transitions.scss
+++ b/resources/assets/sass/abstracts/_transitions.scss
@@ -59,7 +59,7 @@
 .swipe-left-leave-active, .swipe-left-enter-active,
 .swipe-right-leave-active, .swipe-right-enter-active {
   animation-duration: .6s;
-  animation-timing-function: ease;
+  animation-timing-function: ease-in-out;
 }
 .swipe-right-leave-active, .swipe-right-enter-active {
   animation-direction: reverse;
